# ivans_fourth_workshop

./: .gitignore  CMakeLists.txt  README.md  execute_c_programs.sh  execute_pdua_programs.sh  settings.json
include/: c_programs.h  pdua_compiler.hpp  pdua_file_processor.hpp  pdua_instruction.hpp  pdua_simulator.hpp
pdua-syntax/: language-configuration.json  package.json
pdua-syntax/syntaxes/: pdua.tmLanguage.json
pdua_programs/: add_without_sign.pdua  booth_template.asm  pnt_1.asm  pnt_1.pdua
pdua_programs/proyecto_1/codigo/: mult_with_sign.pdua  mult_with_sign_no_labels.pdua  mult_without_sign.pdua  mult_without_sign_no_labels.pdua  power_with_sign.pdua  power_with_sign_no_labels.pdua
pdua_programs/proyecto_1/pruebas_escritorio/: Booth_Prueba_Escritorio_2Casos.xlsx
pdua_programs/proyecto_1/tabla_actualizada/: booth_prueba_escritorio_dos_casos.xlsx  tabla_actualizada_isa_pdua.xlsx
pdua_programs/taller_pdua/: example_operation.pdua  pnt2_.pdua  suma.pdua
src/: c_programs.c  c_programs_main.c  main.cpp  pdua_compiler.cpp  pdua_file_processor.cpp  pdua_instruction.cpp  pdua_simulator.cpp  simulator_main.cpp
